[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster-response-env"
version = "1.0.0"
description = "Real-world emergency disaster response simulation for AI agent evaluation"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["openenv", "reinforcement-learning", "disaster-response", "emergency-management", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "openai>=1.35.3",
    "requests==2.32.3",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.0",
    "httpx==0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/naitikramchandani337/disaster-response-env"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]

[tool.openenv]
name = "disaster-response-env"
entry_point = "server.app:app"
